<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/logInActivity_backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/baseline_close_24"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/logInActivity_title"
            />

        <TextView
            android:id="@+id/logInActivity_title"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"

            android:text="@string/AppName"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C6B3B3"
            android:backgroundTintMode="multiply"
            android:hint="@string/hint_enterYourUsername"
            />

        <TextView
            android:id="@+id/alertText_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/username_doesNotExist_alertText"
            android:textColor="#880000"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C6B3B3"
            android:backgroundTintMode="multiply"
            android:hint="@string/hint_enterYourPassword"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_username" />

        <TextView
            android:id="@+id/alertText_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/password_incorrect_alertText"
            android:textColor="#880000"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#DAECDB"
            android:text="@string/logIn_Text"
            android:textColor="#379131"
            android:layout_marginVertical="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_password"

            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>