<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_1"
    tools:context=".NewUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newUserActivity_topHeader_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/newUserActivity_exit_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:contentDescription="x"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserActivity_topHeader_layout">

        <LinearLayout
            android:id="@+id/newUserActivity_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"

            android:layout_marginVertical="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newUserActivity_username_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enterYourUsername"
                android:inputType="textAutoComplete"
                android:minHeight="@dimen/min_height"
                android:textColor="@color/white_2"
                android:textColorHint="@color/white_3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/newUserActivity_username_alertText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/username_unavailable_alertText"
                android:textColor="@color/red_alert_night"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newUserActivity_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enterYourPassword"
                android:inputType="textPassword"
                android:minHeight="@dimen/min_height"
                android:textColor="@color/white_2"
                android:textColorHint="@color/white_3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/newUserActivity_password_alertText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/emptyField_alertText"
                android:textColor="@color/red_alert_night"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newUserActivity_reEnteredPassword_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_password_hint"
                android:inputType="textPassword"
                android:minHeight="@dimen/min_height"
                android:textColor="@color/white_2"
                android:textColorHint="@color/white_3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/newUserActivity_reEnteredPassword_alertText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/passwordMismatch_alertText"
                android:textColor="@color/red_alert_night"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>


        <Button
            android:id="@+id/newUserActivity_createAccount_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/big_padding"
            android:backgroundTint="@color/blue_1"
            android:text="@string/create_account_text"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>