<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e1e1e"
    android:clickable="true"
    android:longClickable="true"
    tools:context=".CardDescriptionEditorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardDescFragment_headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cardDescFragment_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardDescFragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_description_fragment_header"
            android:textColor="#cecece"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cardDescFragment_DoneButton"
            app:layout_constraintStart_toEndOf="@id/cardDescFragment_cancelButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardDescFragment_DoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/cardDescFragment_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2e2e2e"
        android:minHeight="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDescFragment_headerLayout">

        <EditText
            android:id="@+id/cardDescFragment_description_EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:hint="@string/start_of_your_card_description"
            android:paddingHorizontal="10dp"
            android:textColor="#cecece"
            android:textColorHint="#888888"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>